--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wallet-finance-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MykhailoKutsyi.github.io/Wallet/",
+  "homepage": "https://MykhailoKutsyi.github.io/Wallet-finance-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
