--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "private": true,
   "homepage": "https://MykhailoKutsyi.github.io/Wallet-finance-app/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "styled-components": "^5.3.5"
+    "react-toastify": "^9.0.7",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.5",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
