--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://MykhailoKutsyi.github.io/Wallet-finance-app/",
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.0.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
