--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.2",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.3.1",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^5.1.7-beta.1",
