--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-ellipsis-text": "^1.2.1",
     "react-loader-spinner": "^5.1.7-beta.1",
     "react-media": "^1.10.0",
     "react-redux": "^8.0.2",
