--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "chart.js": "^3.8.2",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.3.1",
     "react-datetime": "^3.1.1",
