--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-select": "^5.4.0",
     "react-toastify": "^9.0.7",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
